fixes SVG z-index problems with TL

--- a/views/shared/css/neatline.css
+++ b/views/shared/css/neatline.css
@@ -161,6 +161,10 @@ div.title-tip {
 
 /* Timeline */
 
+.timeline-container {
+    z-index: 0;
+}
+
 .popover {
     opacity: 0;
 }
